@@ -374,6 +374,7 @@ struct StatBonuses {
 	int16	Metabolism;							// Food/drink consumption rates.
 	bool	Sanctuary;							// Sanctuary effect, lowers place on hate list until cast on others.
 	int16   FactionModPct;						// Modifies amount of faction gained.
+	int16	MeleeVulnerability;					// Weakness/mitigation to melee damage
 
 	// AAs
 	int8	Packrat;							//weight reduction for items, 1 point = 10%
